Update helm-release.yaml enable jukebox
Signed-off-by: Zee Aslam <zeet6613@gmail.com>

--- a/cluster/apps/media/navidrome/app/helm-release.yaml
+++ b/cluster/apps/media/navidrome/app/helm-release.yaml
@@ -44,6 +44,7 @@ spec:
               ND_REVERSEPROXYWHITELIST: 0.0.0.0/0
               ND_SCANSCHEDULE: "@every 1h"
               ND_SESSIONTIMEOUT: 24h
+              ND_JUKEBOX_ENABLED: "true"
             resources:
               requests:
                 cpu: 10m
