--- a/cluster/apps/media/ytdlp-sub/app/config/secrets.sops.yaml
+++ b/cluster/apps/media/ytdlp-sub/app/config/secrets.sops.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: ytdlp-sub-cookiea
+    name: ytdlp-sub-cookies
     namespace: media
 type: Opaque
 stringData:
