--- a/cluster/apps/monitoring/gatus/app/rbac.yaml
+++ b/cluster/apps/monitoring/gatus/app/rbac.yaml
@@ -3,6 +3,11 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: gatus
+  labels:
+    app.kubernetes.io/managed-by: Helm
+  annotations:
+    meta.helm.sh/release-name: gatus
+    meta.helm.sh/release-namespace: networking
 rules:
   - apiGroups: [""]
     resources: ["configmaps", "secrets"]
@@ -12,6 +17,11 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: gatus
+  labels:
+    app.kubernetes.io/managed-by: Helm
+  annotations:
+    meta.helm.sh/release-name: gatus
+    meta.helm.sh/release-namespace: networking
 roleRef:
   kind: ClusterRole
   name: gatus
