--- a/cluster/apps/monitoring/gatus/app/helm-release.yaml
+++ b/cluster/apps/monitoring/gatus/app/helm-release.yaml
@@ -133,8 +133,9 @@ spec:
             interval: 1m
             scrapeTimeout: 10s
     serviceAccount:
-      create: true
-      name: *app
+      default:
+        enabled: true
+        name: *app
     persistence:
       data:
         existingClaim: gatus-data-v1
