--- a/cluster/apps/monitoring/gatus/app/helm-release.yaml
+++ b/cluster/apps/monitoring/gatus/app/helm-release.yaml
@@ -133,8 +133,7 @@ spec:
             interval: 1m
             scrapeTimeout: 10s
     serviceAccount:
-      *app :
-        enabled: true
+      *app : {}
     persistence:
       data:
         existingClaim: gatus-data-v1
