--- a/cluster/apps/monitoring/gatus/app/helm-release.yaml
+++ b/cluster/apps/monitoring/gatus/app/helm-release.yaml
@@ -133,7 +133,8 @@ spec:
             interval: 1m
             scrapeTimeout: 10s
     serviceAccount:
-      *app : {}
+      gatus:
+        enabled: true
     persistence:
       data:
         existingClaim: gatus-data-v1
