--- a/cluster/apps/monitoring/gatus/app/helm-release.yaml
+++ b/cluster/apps/monitoring/gatus/app/helm-release.yaml
@@ -64,9 +64,10 @@ spec:
         containers:
           app:
             image:
-              repository: twinproduction/gatus
-              # tag: experimental
-              tag: v5.26.0@sha256:3c0314bd1b1e9d7c34d8f2efee16b380770a9639ec5386cc305e8df104e097dc
+              repository: ghcr.io/h3mmy/gatus
+              tag: testing@sha256:87f8e8ea0073d69dd6eecacecf93c55699f2ee9e2e062e547ce4b10b536743d1
+              # repository: twinproduction/gatus
+              # tag: v5.26.0@sha256:3c0314bd1b1e9d7c34d8f2efee16b380770a9639ec5386cc305e8df104e097dc
             env:
           #    INIT_POSTGRES_DBNAME: *app
           #    INIT_POSTGRES_HOST: *pghost
@@ -93,9 +94,9 @@ spec:
             securityContext: &securityContext
               capabilities:
                 drop: [ALL]
-                add: # Required with non-experimental image. See https://github.com/TwiN/gatus/issues/697#issuecomment-2439655418
-                  - NET_ADMIN
-                  - NET_RAW
+                # add: # Required with non-experimental image. See https://github.com/TwiN/gatus/issues/697#issuecomment-2439655418
+                #   - NET_ADMIN
+                #   - NET_RAW
             resources: *resources
           config-sync:
             image: *configSyncImage
