Add keep_max_files option to config.yaml
Signed-off-by: Zee Aslam <zeet6613@gmail.com>

--- a/cluster/apps/media/ytdlp-sub/app/config/config.yaml
+++ b/cluster/apps/media/ytdlp-sub/app/config/config.yaml
@@ -23,6 +23,7 @@ presets:
       subscription_download_probability: 1.0
     output_options:
       maintain_download_archive: True
+      keep_max_files: 0
       output_directory: "/Data/youtube/music"
     music_tags:
       title: "{track_title}"
