--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -29,4 +29,5 @@ resources:
   # temporary until I figure out a sustainable way to do cross-namespace extensionRefs
   - ./middlewares/chain-no-auth.yaml
   - ./middlewares/bloopnet-xyz-auth.yaml
-  - ./ytdlp-sub/ks.yaml
+  # disable until account detangling is figured out
+  # - ./ytdlp-sub/ks.yaml
