--- a/cluster/apps/media/navidrome/app/helm-release.yaml
+++ b/cluster/apps/media/navidrome/app/helm-release.yaml
@@ -47,6 +47,7 @@ spec:
               ND_JUKEBOX_ENABLED: "true"
               ND_JUKEBOX_ADMINONLY: "false"
               ND_ENABLEUSEREDITING: "true"
+              ND_ENABLESHARING: "true"
               ND_PASSWORDENCRYPTIONKEY: "${ND_ENCRYPTION_KEY}"
             resources:
               requests:
