Add ND_DEFAULTSHAREEXPIRATION to helm-release.yaml
Signed-off-by: Zee Aslam <zeet6613@gmail.com>

--- a/cluster/apps/media/navidrome/app/helm-release.yaml
+++ b/cluster/apps/media/navidrome/app/helm-release.yaml
@@ -48,6 +48,7 @@ spec:
               ND_JUKEBOX_ADMINONLY: "false"
               ND_ENABLEUSEREDITING: "true"
               ND_ENABLESHARING: "true"
+              ND_DEFAULTSHAREEXPIRATION: 760h
               ND_PASSWORDENCRYPTIONKEY: "${ND_ENCRYPTION_KEY}"
             resources:
               requests:
