Enable ytdlp-sub kustomization file
Signed-off-by: Zee Aslam <zeet6613@gmail.com>

--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -30,4 +30,4 @@ resources:
   - ./middlewares/chain-no-auth.yaml
   - ./middlewares/bloopnet-xyz-auth.yaml
   # disable until account detangling is figured out
-  # - ./ytdlp-sub/ks.yaml
+  - ./ytdlp-sub/ks.yaml
