--- a/cluster/repositories/helm/k8s-gateway-charts.yaml
+++ b/cluster/repositories/helm/k8s-gateway-charts.yaml
@@ -6,5 +6,5 @@ metadata:
   namespace: flux-system
 spec:
   interval: 30m
-  url: https://ori-edge.github.io/k8s_gateway/
+  url: https://k8s-gateway.github.io/k8s_gateway/
   timeout: 3m
