Update ServiceAccount definition in rbac.yaml
Signed-off-by: Zee Aslam <zeet6613@gmail.com>

--- a/cluster/apps/system-upgrade/system-upgrade-controller/app/rbac.yaml
+++ b/cluster/apps/system-upgrade/system-upgrade-controller/app/rbac.yaml
@@ -11,10 +11,16 @@ subjects:
   - kind: ServiceAccount
     name: system-upgrade-controller
     namespace: system-upgrade
+# ---
+# apiVersion: talos.dev/v1alpha1
+# kind: ServiceAccount
+# metadata:
+#   name: system-upgrade-controller
+# spec:
+#   roles: ["os:admin"]
 ---
-apiVersion: talos.dev/v1alpha1
+apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: system-upgrade-controller
-spec:
-  roles: ["os:admin"]
+  namespace: system-upgrade
