Disable geoip feature in helm-release.yaml
Signed-off-by: Zee Aslam <zeet6613@gmail.com>

--- a/cluster/apps/auth/authentik/helm-release.yaml
+++ b/cluster/apps/auth/authentik/helm-release.yaml
@@ -90,7 +90,7 @@ spec:
                       - x86
 
     geoip:
-      enabled: true
+      enabled: false
       existingSecret:
         secretName: geoip-secrets
         accountId: maxmindAccountId
