Comment out Renovate configuration verification step
Comment out the step for verifying Renovate configuration.

Signed-off-by: Zee Aslam <zeet6613@gmail.com>

--- a/.github/workflows/schedule-renovate.yaml
+++ b/.github/workflows/schedule-renovate.yaml
@@ -36,8 +36,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
 
-      - name: Verify Renovate Configuration
-        uses: suzuki-shunsuke/github-action-renovate-config-validator@v1.1.1
+      #- name: Verify Renovate Configuration
+      #  uses: suzuki-shunsuke/github-action-renovate-config-validator@v1.1.1
 
       - name: Generate Token
         uses: tibdex/github-app-token@v2
