--- a/cluster/apps/monitoring/gatus/app/helm-release.yaml
+++ b/cluster/apps/monitoring/gatus/app/helm-release.yaml
@@ -51,7 +51,8 @@ spec:
             image: &configSyncImage
               repository: ghcr.io/kiwigrid/k8s-sidecar
               # don't use 1.30.10 or 1.30.11 due to https://github.com/kiwigrid/k8s-sidecar/issues/431
-              tag: 2.1.2@sha256:8b875915be0869624cf5dfd48a1dfbfb627e778793cc1612d00fb281a8805c63
+              # tag: 2.1.2@sha256:8b875915be0869624cf5dfd48a1dfbfb627e778793cc1612d00fb281a8805c63
+              tag: 1.30.9@sha256:8c06e1ba643a4625de14b2db65c356f5db6b1482a25fce4754380a2936207338
               pullPolicy: IfNotPresent
             env: &configSyncEnv
               FOLDER: /config
