--- a/cluster/repositories/oci/kustomization.yaml
+++ b/cluster/repositories/oci/kustomization.yaml
@@ -2,8 +2,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - grafana.yaml
   - terraform-cloudflare.yaml
   - terraform-gcp.yaml
   - terraform-oci.yaml
   - terraform-s3.yaml
-  # - cnpg.yaml
