--- a/cluster/apps/networking/external-dns/app/helm-release.yaml
+++ b/cluster/apps/networking/external-dns/app/helm-release.yaml
@@ -12,8 +12,8 @@ spec:
       version: 1.19.0
       sourceRef:
         kind: HelmRepository
-        name: external-dns-charts
-        namespace: flux-system
+        name: external-dns
+        namespace: networking
       interval: 5m
   install:
     createNamespace: true
