--- a/cluster/apps/media/plex-trakt-sync/helm-release.yaml
+++ b/cluster/apps/media/plex-trakt-sync/helm-release.yaml
@@ -37,8 +37,7 @@ spec:
               repository: ghcr.io/taxel/plextraktsync
               tag: 0.34.18
             args:
-              - info && /bin/bash
-              # - sync
+              - sync
             env:
               PLEX_BASEURL: http://plex.media.svc.cluster.local:32400
               PLEX_LOCALURL: http://plex.media.svc.cluster.local:32400
