--- a/cluster/apps/monitoring/grafana/instance/grafana.yaml
+++ b/cluster/apps/monitoring/grafana/instance/grafana.yaml
@@ -35,7 +35,7 @@ spec:
                   name: dashboards
             # This container watches the namespace for configmaps with the `dashboards` label
             # and creates files for all their keys under `FOLDER`
-            - image: 'ghcr.io/home-operations/k8s-sidecar:2.1.2@sha256:d9e169add4e71fd5931a24e11696853f3d804ebc2022cd81f038e7ef22f4d626'
+            - image: 'ghcr.io/kiwigrid/k8s-sidecar:1.30.9@sha256:8c06e1ba643a4625de14b2db65c356f5db6b1482a25fce4754380a2936207338'
               name: k8s-sidecar
               env:
                 - name: LABEL
