--- a/cluster/apps/networking/k8s-gateway/helm-release.yaml
+++ b/cluster/apps/networking/k8s-gateway/helm-release.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 5m
   chart:
     spec:
-      chart: k8s_gateway
+      chart: k8s-gateway
       version: 3.2.8
       sourceRef:
         kind: HelmRepository
