thanos and authentik-redis redo

--- a/cluster/apps/auth/authentik/kustomization.yaml
+++ b/cluster/apps/auth/authentik/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 namespace: auth
 resources:
   - geoip-secrets.sops.yaml
-  - redis
+  # - redis
   - postgres
   - media
   # Additional RBAC needed for spiffe
