--- a/cluster/apps/networking/blocky/app/redis/helm-release.yaml
+++ b/cluster/apps/networking/blocky/app/redis/helm-release.yaml
@@ -22,7 +22,10 @@ spec:
     remediation:
       remediateLastFailure: true
   values:
-
+    image:
+      registry: docker.io
+      repository: bitnamilegacy/redis
+      tag: 7.4.1-debian-12-r3
     global:
       redis:
         password: ${BLOCKY_REDIS_PASSWORD}
