--- a/cluster/apps/monitoring/gatus/app/helm-release.yaml
+++ b/cluster/apps/monitoring/gatus/app/helm-release.yaml
@@ -69,10 +69,8 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/h3mmy/gatus
-              tag: testing@sha256:87f8e8ea0073d69dd6eecacecf93c55699f2ee9e2e062e547ce4b10b536743d1
-              # repository: twinproduction/gatus
-              # tag: v5.26.0@sha256:3c0314bd1b1e9d7c34d8f2efee16b380770a9639ec5386cc305e8df104e097dc
+              repository: twinproduction/gatus
+              tag: v5.31.0@sha256:3a432fcc2826b8eb2b38caceb83e7777fda139b8058b1d022c73a82be7342682
             env:
           #    INIT_POSTGRES_DBNAME: *app
           #    INIT_POSTGRES_HOST: *pghost
