update bloopyboi config

--- a/cluster/apps/default/bloopyboi/config/secrets.sops.yaml
+++ b/cluster/apps/default/bloopyboi/config/secrets.sops.yaml
@@ -5,15 +5,18 @@ metadata:
     namespace: flux-system
 type: Opaque
 stringData:
-    botToken: ENC[AES256_GCM,data:S1v0CJmN0+5jKe8RbBGnhGkK04io6ON0KQyGgNCyV9FHyWljr3wgNzmabDCFnNHSXKj7z3xIXZ8SsWY=,iv:KKNk6PlcWWpP89SGwJKtaa9z6KuaXVftxwRL//junqw=,tag:w5Ulq0/uAhjL6Rw1RpUx3g==,type:str]
-    appId: ENC[AES256_GCM,data:vIL8Ec3v+epfboA1i3neCIow,iv:npy/oDZ0d39b3iDxvUrLu4GRw4pJeymk0E1KbirAlQA=,tag:l3WYZ5XW8JjiN/I56505AA==,type:str]
-    efGuildId: ENC[AES256_GCM,data:EzhZH4oN4cZK1GkQ6cDDNdqy,iv:2NR3uJXdtLK+H8qJtpGsGEmhNKBm5kx74BNi8Z11DGY=,tag:tRHKLTqwa68DCJC51ptjHw==,type:str]
-    efAnnounce: ENC[AES256_GCM,data:K0sKf34jIW1+Iq7w1kzwp7c4TA==,iv:q2es8UB1nw6EYDCBjUMK12Oaon0Ny4hXUEJiOMpgG0w=,tag:90+DsBXDuuDc6mZrosF0oQ==,type:str]
-    efGoblinRoleId: ENC[AES256_GCM,data:YLq9FYMNXLoXnJD+M7222uTMiA==,iv:xPKU8cCGS5fY9OC46P1ZkBl6XEuEtAjCJmB1Q0pyOHQ=,tag:tAZspJmuS9cruV5OWWgxmw==,type:str]
-    efPlexGangRoleId: ENC[AES256_GCM,data:G/FT82ExQOwVvuiRRa3YYN4e,iv:Am5x9cs4o0SM/L7LsY6L6avfeObfXn6QII5YZRayCVI=,tag:xU3x0/UvN+DRvGA0aT83ag==,type:str]
-    efDevRoleId: ENC[AES256_GCM,data:Zx5JWAMKzzB7dKa9bSucFqjm,iv:JoUx3N1esezKgVy7CkNw3pW5jRXFAMiKXQYU4unK7Pk=,tag:XPH62svfEfxQPnhg7XOaBg==,type:str]
-    efBlissRoleId: ENC[AES256_GCM,data:u9ykTNtnj91QYn1+2qT7bFCI,iv:KyC6ZRB+OffIY8lBV36V1iYphw9YziZa3e1OPzCxlz4=,tag:nH3OdGkvUvEUd0WFB/QfgQ==,type:str]
-    postgresPass: ENC[AES256_GCM,data:bP8HCxs+ge4eBzBcB7+44084KjL/1DyzkaTeg2KP6kuwIg==,iv:lcD3nFfLEe69OJjTmMhJfox5F74TlVPywfyUjsfShV8=,tag:5z691sjoZEN9aDdyqOzTgw==,type:str]
+    botToken: ENC[AES256_GCM,data:/PLYBqO21oYUuDv1ax74Pu7hTbbNk+jIurYS+lVTtfhdXFMDdDO7J42PAApLUMDDiUyDCGZ7OaB/32E=,iv:UoAfu2HX4Vhvo8JvDTKx1pqhm5jLQdoaiI5eGRV8ZR0=,tag:+L2vDtlX3f9AnbzWm18JzQ==,type:str]
+    appId: ENC[AES256_GCM,data:gEWlAowDzVMTcKIJsDI+Z3ZP,iv:qZHdhy4bibQmYBnID/T4P81CWxJ7rkutv5s6haQIFNI=,tag:9lxe9Pe56/EeB1zwVrdmwg==,type:str]
+    efGuildId: ENC[AES256_GCM,data:LGm+CX6GnKy/YbViFDyZYFQ5,iv:Ki2hVd4g0pwSm7ohibTHefiztBF4CPCdSqWJtwSTpVE=,tag:q8V4Rg6F3ygaRs6trs876A==,type:str]
+    efAnnounce: ENC[AES256_GCM,data:DmK7REWdRE676HsEh/4LQwyJGg==,iv:kXHAjB97f3hvIr64B45UpiEMiAl4l2dwMePzgFUYnFc=,tag:w0JXSw/BhLw2R511yeNMZg==,type:str]
+    efGoblinRoleId: ENC[AES256_GCM,data:8A3wXLMh2aqFG96oICKdhI7LlQ==,iv:7KaCIJccAAUASrxdH3ybAxp28+i9zoJtlxyZeeUTFZQ=,tag:snICD38JSP8iyeLm3QnJhw==,type:str]
+    efPlexGangRoleId: ENC[AES256_GCM,data:hpjmSoQ2qroRGz3XvVrPAhZ0,iv:Fdn3l7mPlTE79313nIFK5c7psOuqYnaDtQa30UEERwk=,tag:4xx9nkHARkmEC50+JubCxw==,type:str]
+    efDevRoleId: ENC[AES256_GCM,data:2Yj3oorYBhHqrxKCtzMFfXHp,iv:GJOMK6TckdEgC/ToktWaC4thC/A+Ib0tY4xO0r1A/jI=,tag:QaGS51XdsyjwezQls7+Pxg==,type:str]
+    efBlissRoleId: ENC[AES256_GCM,data:PB0Camz8Q2wcVGkRX0njftn2,iv:vE2sPpwZNL1eKB44LR0/dzO5R4HI/RF1i69mGQDzzKg=,tag:m7CTEZxbiBojf/JqSUDS1w==,type:str]
+    efRoleSelection: ENC[AES256_GCM,data:BAmJCOoNY3ftscVRc5sfxtjsfw==,iv:WbzRc9RW+fmqRFdP6eDjArvx8Rz3pxiH8daXoTQmw4k=,tag:W2Ry3bd9RNVUo9wdxCeKAQ==,type:str]
+    efNewsRoleId: ENC[AES256_GCM,data:vbL7MTUbguSQTHWsOLZVCymfAw==,iv:HO49WDIl/eWv1TrUne+gJrZBh0E8rZvPEPkemLiGrAo=,tag:O35D8AdFk3rgO700cwZa5g==,type:str]
+    efNewsChannelId: ENC[AES256_GCM,data:nUYvpei4I6++72Hdq04JA0vrsw==,iv:L6Gs3OhO4KD2mZdEdavrLdgkvy16h+aNIHFfQeEaGJQ=,tag:MQTkAuV1YKWENrXx+lHcfg==,type:str]
+    postgresPass: ENC[AES256_GCM,data:OBB7B3UvssUzA9YPoszpsVlD0pPnizh8nAZ193kTSoQdkA==,iv:nrwqrwwRZgpiKOI36XUru4vhfIsTiYLHVHvpTcH8rpY=,tag:8a+jmWh2cQHoQNjGwo5nog==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,23 +26,23 @@ sops:
         - recipient: age1hr5v66mq2rtflw8vrzmdlaku48v0j5l2wr58lrdmxqp5decczugs3rr6yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1WnZ3UENqSHJ5YUtPeUxp
-            NExRVm9CeGYvQXJFWmt0cmc2OVp0YW1hK1NVCk9YZFh4Zk1oc21EVDJEYWsxRDgv
-            eW5QQ0w0MzVnem9hMGtickZIc0lmancKLS0tIEhPYmp1WXZUVThseHpkdkluRUQz
-            a050SVpzdVlQWWpvcGo4YTFpRTl3ajQKLTqWiPeOBnCrzDcNduUgfHu1r7NqrVJ6
-            0G0afHjLZ/iKu8VKXfo0VdEqbxfA0LxTIAtnS5mtw0l6CxfFpNdTcQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxbFUwM2loNEU4dmI5N2FS
+            NkJabmhHRVpLL29FNzkraUZieDNHTjBTaEhVCkdrb1pCUXZVaU5wVlh3NVdtaEQw
+            dGhvelFzc1F1MFhjVE5MVllZMHhXTmcKLS0tIEhYaC9CckIvNzVwKzVESjUyalRZ
+            NEFYQUlmRjdhaG1pZDFFUHVobnFMZUUK37aCykikkoA5VTsraR/e/t3v9G3j0HJg
+            YVExK8os1aKqr38lUkFl7lIHpvRtBVBpEvDqmWcqazH+Y/agjzz86A==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age1rp9r7wvsgy6zcl3j4v7kvnrv29sawvqhlm759j9x6zvs0f9ry4kqtmajrq
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnMGFMVjNNeVBPVTF1L0Yr
-            aDdScm5OYUlRaWpyVmx6RzJBdjRRZGd3V1NjCjNFbStHTnNoLys1NHRVRVlwNHNV
-            Y0tMS1ZNUHhmMUZ5TVdwWDg5WUt2YkUKLS0tIGpmU0hIVVAwcEtIZnloRG5HOVBN
-            ZzdvaWVKY1ZXYmI1Z0pqdGNUa05sV0UKnaUSqTr4zgqRSFQhtVEJ3UH9C29qPiqs
-            Max9pxZm1I9KxPI2cVQ8dYIfo3BT/bgF/MLCjuVODtaLGEC7aSAjOw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1bkR3bVdvUDBtV2F3MWF6
+            ZVRBdFZJRE84azlPdm43RXlEMjFPQXJxMFE4CitBcGVKaDhFR29NRkVSMHoySE96
+            ekE1K2JBUkF6aU9MSThjeVl2ODlXbG8KLS0tIGF2ZzBhRmd0RlpDM2NwYkp1Tk0y
+            eVdPdWNhdkV3RTEzMVVqam82dWNBRk0KJ0CroC371RUCZl/H3ZG71IG+EbEUF3Ma
+            sOyGw6jul239d3eGPIxr7dWANIYVrBKZanjyg56RzUZjziLyR3WJnA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-04-12T15:45:06Z"
-    mac: ENC[AES256_GCM,data:g2ZZxC1gMjgZWhvEwLUgvnrPtbeMxxMG1gvAeKoYmBl5JQv36CCl2OcJQSq4TrR2qM3B0MRpgr9zp56qzzGcDIb0p8jHDA0QUikM2hk/fpNO/X28Y9i0l+0sGAIxH2LQh5prbPHGcPX2dWg9LOT3rTLu0cdpvE1MaXf8GwnBAgg=,iv:hBHmQlKItcw4fci2d10GiG7PRlri3UkBgRPwkWlExjE=,tag:lgbToV97tX3c0oZzcg912A==,type:str]
+    lastmodified: "2025-11-10T00:08:49Z"
+    mac: ENC[AES256_GCM,data:CNBsupopvrNqqzPuHR+DXX9/ICX+OO4/GHWrYkRSwbhgHtCo5OnIZWX+PcGjL48SgaA/WQV0vOgoOTh6DbSFM/28AjlaZohhygrolJeB72QLDam+gV1QGHfCEnQ2L5B7iNBmMLLd3OykwWGd2yAzr4YDZHiXOOa6dK63MwMuglY=,iv:zPrRBXCaXIHI5K0lXL/r9nOecMv7lDROi1g/GURahwY=,tag:62ChBJ1pOdDjtwclmhwWsA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
