--- a/cluster/apps/default/bloopyboi/app/config.yaml
+++ b/cluster/apps/default/bloopyboi/app/config.yaml
@@ -8,6 +8,16 @@ discord:
         channel:
           name: bot-announcements
           id: ${efAnnounce}
+      roleSelection:
+        channel:
+          name: role-selection
+          id: ${efRoleSelection}
+        prompts:
+          - message: These roles grant access to specific channels (set 1)
+            options:
+              - emojiId: 📰
+                roleId: ${efNewsRoleId}
+                description: "Provides Access to the <#${efNewsChannelId}> channel (News incl. political news)"
       commands:
         - name: book
           enabled: true
