--- a/cluster/apps/media/plex-trakt-sync/helm-release.yaml
+++ b/cluster/apps/media/plex-trakt-sync/helm-release.yaml
@@ -20,7 +20,12 @@ spec:
       plex-trakt-sync:
         annotations:
           reloader.stakater.com/auto: "true"
-
+        cronjob:
+          schedule: "@daily"
+          timeZone: ${TZ}
+          concurrencyPolicy: Forbid
+          successfulJobsHistory: 1
+          failedJobsHistory: 1
         pod:
           enableServiceLinks: false
           labels:
