--- a/cluster/apps/media/plex-trakt-sync/helm-release.yaml
+++ b/cluster/apps/media/plex-trakt-sync/helm-release.yaml
@@ -20,12 +20,12 @@ spec:
       plex-trakt-sync:
         annotations:
           reloader.stakater.com/auto: "true"
-        cronjob:
-          schedule: "@daily"
-          timeZone: ${TZ}
-          concurrencyPolicy: Forbid
-          successfulJobsHistory: 1
-          failedJobsHistory: 1
+        #cronjob:
+        #  schedule: "@daily"
+        #  timeZone: ${TZ}
+        #  concurrencyPolicy: Forbid
+        #  successfulJobsHistory: 1
+        #  failedJobsHistory: 1
         pod:
           enableServiceLinks: false
           labels:
@@ -42,7 +42,8 @@ spec:
               repository: ghcr.io/taxel/plextraktsync
               tag: 0.34.19
             args:
-              - sync
+              - watch
+             # - sync
             env:
               PLEX_BASEURL: http://plex.media.svc.cluster.local:32400
               PLEX_LOCALURL: http://plex.media.svc.cluster.local:32400
